# DataScienceUtils

./: .coveragerc  .coveralls.yml  .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  .version  CHANGELOG.md  Dockerfile  Dockerfile.mpl_hash_gen  LICENSE  MANIFEST.in  README.md  deploy-conda.bat  deploy-conda.sh  deploy-docker.bat  deploy-docker.sh  deploy-pypi.bat  generate_mpl_hash.bat  install.ps1  install.sh  pyproject.toml  requirements-conda.txt  requirements-dev.txt  requirements-docs.txt  requirements-packaging.txt  requirements-pypi.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
data-science-utils/: meta.yaml
docs/: index.md  metrics.md  preprocess.md  strings.md  visualization_aids.md
docs/source/: ai_skills.rst  conf.py  contributing.rst  index.rst  installation.rst  math_utils.rst  metrics.rst  preprocess.rst  strings.rst  transformers.rst  unsupervised.rst  visualization_aids.rst  xai.rst
docs/source/metrics/: confusion_matrix.rst  curves.rst  directional_metrics.rst  error_analysis.rst  index.rst  learning_curves.rst  probability_analysis.rst  regression.rst
docs/source/preprocess/: index.rst  statistics.rst  visualization.rst
docs/source/transformers/: index.rst  multi_label_binarizer.rst  sentence_embedding.rst
ds-utils/: README.md  metrics.py  strings.py  visualization_aid.py
ds_utils/: __init__.py  math_utils.py  metrics.py  preprocess.py  strings.py  transformers.py  unsupervised.py  visualization_aids.py  xai.py
ds_utils/metrics/: __init__.py  confusion_matrix.py  curves.py  error_analysis.py  learning_curves.py  probability_analysis.py  regression.py  time_series.py
ds_utils/preprocess/: __init__.py  _plot_categorical.py  _plot_datetime.py  _plot_formatters.py  _plot_helpers.py  _plot_numeric.py  _plot_utils.py  statistics.py  visualization.py
ds_utils/transformers/: __init__.py  _common.py  multi_label_binarizer.py  sentence_embedding.py
skills/metrics/: SKILL.md
skills/preprocess/: SKILL.md
skills/strings/: SKILL.md
skills/transformers/: SKILL.md
skills/unsupervised/: SKILL.md
skills/xai/: SKILL.md
tests/: __init__.py  conftest.py  metrics_test_utils.py  preprocess_test_utils.py  test_math_utils.py  test_metrics.py  test_preprocess.py  test_strings.py  test_transformers.py  test_unsupervised.py  test_version.py  test_visualization_aids.py  test_xai.py  utils.py
tests/baseline_images/: mpl3108_ft261.json
tests/resources/: class_with_probabilities.csv  clothing_classification_test.csv  clothing_classification_train_corr.feather  clothing_classification_val.csv  euclidean_distances_plot_magnitude_vs_cardinality.txt  iris_x_test.csv  iris_x_train.csv  iris_y_full.csv  iris_y_test.csv  iris_y_train.csv  loan_final313_small.csv  loan_final313_small_corr.feather  plotly_models.json  plotly_models_pr_curve.json
tests/test_metrics/: conftest.py  test_confusion_matrix.py  test_curves.py  test_generate_error_analysis_report.py  test_learning_curves.py  test_plot_error_analysis_chart.py  test_probability_analysis.py  test_regression.py  test_time_series.py
tests/test_preprocess/: __init__.py  conftest.py  test_plot_correlation_dendrogram.py  test_plot_features_interaction.py  test_plot_relationship_between_features.py  test_statistics.py  test_visualization.py  test_visualize_correlations.py  test_visualize_feature.py
tests/test_transformers/: __init__.py  test_multi_label_binarizer.py  test_sentence_embedding.py
tests/test_xai/: __init__.py  conftest.py  test_decision_paths.py  test_draw_dot_data.py  test_draw_tree.py  test_generate_error_analysis_report.py  test_plot_error_analysis_chart.py  test_plot_features_importance.py
