[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Idan Morad", email = "idanmorad.arthas@gmail.com" },
]
name = "data_science_utils"
dynamic = ["version", "dependencies"]
description = "Data Science Utils extends the Scikit-Learn API and Matplotlib API to provide simple methods that simplify tasks and visualizations for data science projects."
license = { text = "MIT" }
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: tox",
    "Framework :: Matplotlib",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]
keywords = ["data-science", "utilities", "python", "machine-learning", "scikit-learn", "matplotlib", "plotly"]

[project.urls]
Homepage = "https://github.com/idanmoradarthas/DataScienceUtils"
Documentation = "https://datascienceutils.readthedocs.io/en/latest/"
Issues = "https://github.com/idanmoradarthas/DataScienceUtils/issues"
Repository = "https://github.com/idanmoradarthas/DataScienceUtils.git"
Changelog = "https://github.com/idanmoradarthas/DataScienceUtils/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["ds_utils"]

[tool.setuptools.dynamic]
version = { attr = "ds_utils.__version__" }
dependencies = { file = ["requirements.txt"] }
