[build-system]
requires = ["hatch==1.14.1", "hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
authors = [
    { name = "Idan Morad", email = "idanmorad.arthas@gmail.com" },
]
name = "data_science_utils"
dynamic = ["version"]
description = "Data Science Utils extends the Scikit-Learn API and Matplotlib API to provide simple methods that simplify tasks and visualizations for data science projects."
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: tox",
    "Framework :: Matplotlib",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]
keywords = ["data-science", "utilities", "python", "machine-learning", "scikit-learn", "matplotlib", "plotly"]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
    "matplotlib>=3.8.4",
    "seaborn>=0.12.2",
    "scikit-learn>=1.2.2",
    "pydotplus>=2.0.2",
    "joblib>=1.2.0",
    "plotly>=6.1.1"
]

[project.urls]
Homepage = "https://github.com/idanmoradarthas/DataScienceUtils"
Documentation = "https://datascienceutils.readthedocs.io/en/latest/"
Issues = "https://github.com/idanmoradarthas/DataScienceUtils/issues"
Repository = "https://github.com/idanmoradarthas/DataScienceUtils.git"
Changelog = "https://github.com/idanmoradarthas/DataScienceUtils/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["ds_utils"]

[tool.hatch.version]
path = "ds_utils/__init__.py"

[tool.hatch.envs.test]
dependencies = [
    "pyarrow==19.0.1",
    "pytest==8.4.1",
    "pytest-mock==3.14.0",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.6.1",
    "pytest-mpl==0.17.0",
    "kaleido==1.0.0"
]

[tool.hatch.envs.test.env-vars]
PYTHONPATH = "."
OMP_NUM_THREADS = "1"
DISPLAY = ":99"

[tool.hatch.envs.test.scripts]
run = "pytest {args:--mpl --cov-config=.coveragerc --cov=ds_utils --cov-report=xml -n auto}"

[tool.hatch.envs.dev]
dependencies = [
    "build==1.2.2.post1",
    "twine==6.1.0",
]
